# ADiscordBot

./: CMakeLists.txt  README.md  conanfile.txt
src/: commands.cpp  main.cpp
